Bump insights-notification-schemas-java from 0.17 to 0.18 (#1677)